--- a/3d/demoPlan.org
+++ b/3d/demoPlan.org
@@ -1395,6 +1395,103 @@ support crop?
 Cropping - change your texture coordinates that you loading from when loading the texture; e.g. if you you want to crop the top and bottom 10% off the image load from (0.0, 0.1) to (1.0, 0.9).
 
 *** TODO v2.1-v3.0 for application
+**** TODO multi thread
+***** TODO support render worker(wait for chrome, firefox open SharedArrayBuffer by default)
+
+use module functors?
+
+
+conditional compile:
+https://github.com/facebook/reason/issues/1359
+use bsb-native?
+
+
+file names end with "ReWoShare" instead of "Utils"?
+
+
+
+
+****** DONE rollup wd.render.worker.js
+CLOSED: [2018-01-20 Sat 13:47]
+
+
+
+****** DONE create worker and set to state
+CLOSED: [2018-01-20 Sat 15:17]
+
+
+******* DONE pass render test
+CLOSED: [2018-01-20 Sat 15:17]
+test by postMessage
+
+****** DONE pass render worker file dir in main config
+CLOSED: [2018-01-20 Sat 15:56]
+
+
+
+****** TODO init gl
+render worker not set viewport data
+
+******* DONE create worker state
+CLOSED: [2018-01-22 Mon 10:50]
+
+******* DONE create gl
+CLOSED: [2018-01-22 Mon 10:50]
+
+
+******* DONE pass render test
+CLOSED: [2018-01-22 Mon 10:50]
+
+
+
+******* DONE refactor
+CLOSED: [2018-01-22 Mon 12:20]
+//extract XXXReWoShare.re
+
+//rename GL to Gl
+
+
+
+
+****** TODO init material, geometry
+
+
+
+****** TODO build render command shared type array
+
+
+****** TODO draw
+******* TODO draw basic
+
+******** TODO pass render test
+chrome-> 2000 boxes, not flash?
+
+
+
+******* TODO draw instance
+
+******* TODO pass render test
+
+
+****** TODO init config(e.g. isDebug, ...)
+
+
+****** TODO add "useRenderWorker" in render_setting config
+
+////*** TODO init data(version?)
+
+
+****** TODO add and improve worker unit test
+
+****** TODO refactor
+
+****** TODO add pf,render test
+
+***** TODO move Scheduler, CameraController->update to workers
+***** TODO add thread safe api
+
+
+
 **** TODO [#B] v2.1 editor
 refer to "<<WebGL Insights>> 12-Sketchfab Material Pipeline
 From File Variations to Shader Generation" to learn how to handle
