--- a/today.org
+++ b/today.org
@@ -86,24 +86,428 @@ in each frame
 
 
 
-** TODO finish shaders.glsl change
+////** TODO finish shaders.glsl change
+
+
+
+** DONE pass multi thread render render draft test
+CLOSED: [2018-02-14 Wed 10:02]
+
 
 
 
 
 ** TODO add worker job data
+*** DONE finish draft
+CLOSED: [2018-02-19 Mon 18:40]
+
+add isUseWorker to workerDetectData
+
+finish useWorker
+
+
+*** DONE demo
+CLOSED: [2018-02-25 Sun 16:09]
+
+**** DONE worker->init
+CLOSED: [2018-02-24 Sat 21:40]
+//draft
+
+main_init:
+add more job
+//parse config
+
+
+worker_:
+add more job
+//parse config
+
+
+//pass compile
+
+
+
+//pass render test
+
+
+
+
+**** DONE worker->draw
+CLOSED: [2018-02-25 Sun 16:09]
+create wonder-most-animation-frame project and import
+
+
+
+test animation-frame
+
+
+add send->get
+
+
+*** DONE rearrange plan
+CLOSED: [2018-02-26 Mon 10:00]
+use trello:
+write down engine,editor tasks together
+
+////when finish one, edit it!
+
+
+
+
+*** DONE no worker->init, loop
+CLOSED: [2018-02-28 Wed 07:40]
+//pass compile
+
+
+
+**** DONE init
+CLOSED: [2018-02-27 Tue 14:02]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-27 Tue 14:02]
+//pass load test
+
+//add set setting test
+
+//add init device test
+
+//init jobs:
+add initLightMaterialJob_test
+add pregetGLSLDataJob_test
 
 
 
 
 
 
+
+**** DONE loop
+CLOSED: [2018-02-28 Wed 07:40]
+***** DONE pass render test
+CLOSED: [2018-02-27 Tue 21:19]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-28 Wed 07:40]
+loop jobs:
+update jobs
+render jobs
+
+
+//redo-undo
+
+
+//add custom job
+
+
+*** TODO finish worker->init
+**** TODO pass worker test demo
+
+
+
+
+test create worker instance
+
+
+
+
+**** TODO finish init render:
+pass compile:
+create canvas
+
+...
+
+init gl
+
+send isDebug
+
+
+
+
+
+
+
+
+pass unit/integration test:
+add render worker test
+
+
+pass isDebug
+
+
+init light
+
+init geometry
+
+init material...
+
+
+
+
+
+pass unit test:
+loader
+Main
+
+
+
+add jobs:
+        {
+          "name": "preget_glslData"
+        },
+        {
+          "name": "init_state"
+        },
+        {
+          "name": "init_basic_material"
+        },
+        {
+          "name": "init_light_material"
+        }
+
+
+
+
+**** TODO debug info use debug instead of log
+
+
+*** TODO pass unit,integration test
+
+**** TODO add worker unit test
+
+
+
+*** TODO refactor
+
+**** TODO api, admin
+######################
+ecs api is for user
+(ecs api should use system)
+
+ecs admin and renderer admin is for job
+
+
+
+system is for operate state
+
+common is for share logic between systems
+
+
+utils
+
+
+share is for share logic between no worker and worker
+
+######################
+
+
+
+
+add GameObjectSystem
+(api->GameObject.re use it instead of use GameObjectAdmin)
+
+
+Job should use ecs admin instead of ecs system
+(e.g. InitCameraControllerJob.re)
+
+
+
+Job should use renderer admin instead of renderer system
+(e.g. use GLSLSenderAdmin instead of GLSLSenderDrawUtils, ...)
+
+
+
+
+
+
+*** TODO finish worker->draw
+**** TODO make transform data safe
+copy transform data to draw buffer
+
+
+
+
+*** TODO pass unit,integration test
+
+
+
+*** TODO finish no worker->init, draw
+
+
+*** TODO pass unit,integration test
+
+
+*** TODO refactor
+clean worker,single data
+
+
+add getExn in OptionUtils.re instead of Js.Option.getExn:
+use fatal!
+(correspond change Wonder-Editor!)
+
+
+
+most.js:
+add "callFunc" api (refer to animation-frame)
+
+
+
+unify specification:
+all json data use "xxx_xxx"
+all json->record type use "xxxXXX"
+
+
+rename "JobConfig" to "JobConfigData"
+
+
+
+remove DebugUtils.re
+
+
+
+*** TODO optimize
+
+
+
+
+
+
+** TODO refactor
+
+move 
+  workerFileDir: string,
+  /* TODO finish */
+  useWorker:bool,
+
+
+to workerConfig
+
+
+////move all main config to setting.json:
+  canvasId: option(string),
+  isDebug: bool,
+  workerFileDir: string,
+  contextConfig,
+  bufferConfig,
+  gpuConfig
+
+
+** TODO multi thread render
+*** TODO init
+
+
+*** TODO pass unit/integration test
+
+
+
+
+*** TODO render
+
+**** TODO make transform data safe
+copy transform data to draw buffer
+
+
+
+
+*** TODO pass unit/integration test
+
+
+
+
+** TODO publish
+
+
+
+** TODO show debug info
+setting.json add:
+debug: {
+    open_contract_check: true,
+    show_debug_info: true
+}
+
+
+
+show worker, main fps
+
+
+show worker, main memeory
+
+
+show total fps,render time
+
+
+show each job's render time, memory
+
+** TODO publish
+
+
+
+
+** TODO user can add job
+*** TODO worker
+**** TODO support user add worker job(in main/render/camera worker)
+copy transform data
+
+
+**** TODO support user added worker job to new worker
+
+add worker pool
+
+
+
+window.navigator.hardwareConcurrency
+
+make sure only hardwareConcurrency jobs can be used(in each worker)!else jobs should be wait
+
+
+
+
+**** TODO support add worker job at runtime(can add to different/new worker)
+
+*** TODO no worker
+**** TODO support add worker job at runtime(can add to different/new worker)
+
+
+
+
+
+
+** TODO advanced job
+*** TODO user can define job in json, add register job function by js
+
+*** TODO job(or all data) support hot loading
+setting.json add:
+debug: {
+    ...,
+    hot_update_data: true
+}
+
+
+
+add isDirty flag
+
+in each frame
+    if dirty, re-generate job graph
+
+
+
+** TODO publish
 
 
 
 
 
 * 编辑器
+
+** TODO dispose gameObject keep order(need engine fix)
+description
+dispose gameObject cause order wrong(scene tree)
+
+reason
+
+
+solution
+add disposeGameObjectKeepOrder api in engine
+
 
 ** TODO update Wonder-Editor
 
@@ -135,192 +539,7 @@ toCalledWith use list
 
 
 
-** TODO add cull
 
-https://gamedev.autodesk.com/blogs/1/post/353597490642337181
-
-https://www.slideshare.net/DICEStudio/culling-the-battlefield-data-oriented-design-in-practice
-
-
-in do way:
-use array instead of octree?
-
-
-
-each gameObject(meshRenderer) support not join cull:
-judge whether has collider component?
-
-
-instance:
-static instance can only be all culled
-dynamic instance can cull each instance
-
-*** TODO use webassembly???(or not!?)
-use arraybuffer to store render data!?
-
-fall back to js version
-
-*** TODO use web worker for sort and cull
-
-
-
-
-
-
-
-** TODO publish
-
-
-
-** TODO extend
-*** TODO extend component
-/*
-user can write local/public component
-
-add wonder_component_config.json, add "components" field.
-e.g.
-{
-components:[
-"wonder-component-aaa"
-]
-}
-
-wonder should read this field and register it
-
-
-public component:
-(refer to typescript=>d.ts)
-user should send it to public github repository
-in ci, it will check and run unit test
-
-after pass ci and merge it, it will be published to @wonder-components/xxx npm package 
-*/
-
-**** TODO add script component
-http://docs.cocos.com/creator/manual/zh/scripting/
-
-now one script is one component(the type is user script component)
-
-editor should show it in inspector(the component name should be defined by script json)
-
-one gameObject can has multiple user script components(only has one? or has multiple?):
-declare properties(can be show and edit in editor)
-
-implement interface functions(.rei), e.g.:
-onDispose
-...
-
-
-
-refer to:
-https://developer.playcanvas.com/en/user-manual/scripting/
-
-
-
-***** TODO support Hot Reloading 
-https://developer.playcanvas.com/en/user-manual/scripting/hot-reloading/
-
-https://developer.playcanvas.com/zh/user-manual/introduction/
-
-
-
-***** TODO support import other script
-http://docs.cocos.com/creator/manual/zh/scripting/modular-script.html
-
-
-**** TODO add custom component
-declare properties(can be show and edit in editor)
-
-
-
-implement interface functions(.rei), e.g.:
-update
-dispose
-clone
-add
-...
-( component add and implement .rei)
-
-
-
-how to add component data to state???
-
-
-
-accept function string which is inputed from editor!
-use "new Function"?
-
-
-can use job for manage custom component(e.g. add "updateXXX" for update logic)
-
-
-
-
-*** TODO work in editor
-work in editor
-
-
-work with editor ->extension ui component?
-*** TODO solve how to extend by user:(refer to unity)
-
-
-how to write own component
-how to write own extension(material)
-build component repository?
-
-
-
-
-
-
-
-
-**** TODO extend material
-user can add custom material, custom glsl, custom shaderLib_generate, custom render module(like defer, front render
-module/system)
-////(but how to handle render worker?)
-
-
-user can edit shaders.json, shader_libs.json(e.g. add condition limit so that use one shader lib when in mobile, use
-other one when in pc)
-
-
-
-
-**** TODO extend glsl
-
-***** TODO glsl use require,include?
-@bhouston what about a custom webpack loader for the glsl files instead of using the raw-loader? The loader could take care of recursively resolving any #include lines in the root shader file. Any shader could be required in with e.g.:
-
-var vert = require('three-glsl!../shaders/my-shader.vert')
-var frag = require('three-glsl!../shaders/my-shader.frag')
-just a thought
-
-
-*** TODO extend job
-add user job in json
-
-
-*** TODO extend render config
-**** TODO add custom material+custom shader
-***** TODO custom glsl can support instance
-
-
-
-**** TODO user can write own .glsl can register to npm
-modify render config(shader config json?), support build npm->glsl to ShaderChunk.ts?
-
-
-
-
-
-
-
-
-
-
-
-** TODO publish
 
 
 
@@ -593,6 +812,225 @@ fly camera controller
 
 
 
+
+
+
+
+** TODO extend
+*** TODO extend render config
+
+**** TODO improve shaders.json->branch(static_branch)
+remove static_branchs, change to:
+        {
+          "type": "static_branch",
+          "name": "modelMatrix_instance"
+        },
+
+
+add Shaders.re->addBranchHandle api, user can register handle after load(e.g. wd.addBranchHandle("modelMatrix_instance", function(xxx){...}))
+
+
+**** TODO add custom material+custom shader
+***** TODO custom glsl can support instance
+
+
+
+**** TODO user can write own .glsl can register to npm
+modify render config(shader config json?), support build npm->glsl to ShaderChunk.ts?
+
+
+
+
+
+**** TODO extend material
+user can add custom material, custom glsl, custom shaderLib_generate, custom render module(like defer, front render
+module/system)
+////(but how to handle render worker?)
+
+
+user can edit shaders.json, shader_libs.json(e.g. add condition limit so that use one shader lib when in mobile, use
+other one when in pc)
+
+
+
+
+**** TODO extend glsl
+
+***** TODO glsl use require,include?
+@bhouston what about a custom webpack loader for the glsl files instead of using the raw-loader? The loader could take care of recursively resolving any #include lines in the root shader file. Any shader could be required in with e.g.:
+
+var vert = require('three-glsl!../shaders/my-shader.vert')
+var frag = require('three-glsl!../shaders/my-shader.frag')
+just a thought
+
+
+
+
+
+
+
+
+*** TODO extend component
+/*
+user can write local/public component
+
+add wonder_component_config.json, add "components" field.
+e.g.
+{
+components:[
+"wonder-component-aaa"
+]
+}
+
+wonder should read this field and register it
+
+
+public component:
+(refer to typescript=>d.ts)
+user should send it to public github repository
+in ci, it will check and run unit test
+
+after pass ci and merge it, it will be published to @wonder-components/xxx npm package 
+*/
+
+**** TODO add script component
+http://docs.cocos.com/creator/manual/zh/scripting/
+
+now one script is one component(the type is user script component)
+
+editor should show it in inspector(the component name should be defined by script json)
+
+one gameObject can has multiple user script components(only has one? or has multiple?):
+declare properties(can be show and edit in editor)
+
+implement interface functions(.rei), e.g.:
+onDispose
+...
+
+
+
+refer to:
+https://developer.playcanvas.com/en/user-manual/scripting/
+
+
+
+***** TODO support Hot Reloading 
+https://developer.playcanvas.com/en/user-manual/scripting/hot-reloading/
+
+https://developer.playcanvas.com/zh/user-manual/introduction/
+
+
+
+***** TODO support import other script
+http://docs.cocos.com/creator/manual/zh/scripting/modular-script.html
+
+
+**** TODO add custom component
+declare properties(can be show and edit in editor)
+
+
+
+implement interface functions(.rei), e.g.:
+update
+dispose
+clone
+add
+...
+( component add and implement .rei)
+
+
+
+how to add component data to state???
+
+
+
+accept function string which is inputed from editor!
+use "new Function"?
+
+
+can use job for manage custom component(e.g. add "updateXXX" for update logic)
+*** TODO work in editor
+work in editor
+
+
+work with editor ->extension ui component?
+*** TODO solve how to extend by user:(refer to unity)
+
+
+how to write own component
+how to write own extension(material)
+build component repository?
+
+
+
+
+
+
+
+
+
+*** TODO extend job
+add user job in json
+
+
+** TODO publish
+
+
+
+
+
+
+
+
+
+
+
+** TODO add cull
+
+https://gamedev.autodesk.com/blogs/1/post/353597490642337181
+
+https://www.slideshare.net/DICEStudio/culling-the-battlefield-data-oriented-design-in-practice
+
+
+in do way:
+use array instead of octree?
+
+
+
+each gameObject(meshRenderer) support not join cull:
+judge whether has collider component?
+
+
+instance:
+static instance can only be all culled
+dynamic instance can cull each instance
+
+////*** TODO use webassembly???(or not!?)
+use arraybuffer to store render data!?
+
+fall back to js version
+
+*** TODO use web worker for sort and cull
+
+
+
+
+
+
+
+** TODO publish
+
+
+
+
+
+
+
+
+
+
+
+
 ** TODO sort by shader,geometry group, texture
 
 *** TODO optimize sort render command(WebglRenderer.ts)
@@ -668,6 +1106,17 @@ physics worker: >100ms
 
 
 ** TODO publish
+
+
+
+
+** TODO reduce engine file size
+
+- package different .wd?
+can exclude not used pipelines/jobs code?
+
+
+- es6 import, then build by rollup
 
 
 ** TODO advanced ci/cd
@@ -847,18 +1296,19 @@ can work from the scratch
 support full screen(refer to babylon.engine.ts=>450 line)
 
 
-
-
-** TODO package different .wd?
-can exclude not used pipelines/jobs code?
-
-
 ** TODO optimize
 compress geometry:
 https://github.com/google/draco
 
 ** TODO finish projects to apply engine(beta)
 (add needed feature from 0.x engine version!!!)
+
+(
+use reason to write some demos, and use js to write some demos
+
+(because user can use both reason or js to write its logic(e.g. in script component))
+)
+
 
 *** DONE finish a multi-player, game-replay game
 CLOSED: [2017-12-09 Sat 20:24]
@@ -1218,6 +1668,20 @@ https://www.zhihu.com/question/62965225
 
 
 
+** TODO optimize render
+https://zhuanlan.zhihu.com/p/33865743
+https://zhuanlan.zhihu.com/p/33868831
+https://interplayoflight.wordpress.com/2017/10/25/how-unreal-renders-a-frame-part-3/
+
+
+http://www.adriancourreges.com/blog/2015/11/02/gta-v-graphics-study/
+http://www.adriancourreges.com/blog/2015/11/02/gta-v-graphics-study-part-2/
+http://www.adriancourreges.com/blog/2015/11/02/gta-v-graphics-study-part-3/
+
+
+** TODO publish
+
+
 ** TODO UI
 http://ourmachinery.com/post/ui-rendering-using-primitive-buffers/
 
@@ -1228,7 +1692,13 @@ http://ourmachinery.com/post/one-draw-call-ui/
 
 
 ** TODO Voxel
+https://interplayoflight.wordpress.com/2015/04/08/the-rendering-technology-of-skysaga-infinite-isles/
 *** TODO voxel terrain
+https://www.youtube.com/watch?v=51JNyjBcDMo
+
+https://forum.unity.com/threads/terrainengine-voxel-terrain-smooth-cubic-2d-hexagonal-infinite-procedural-terrain.174595/
+
+
 marching cube
 destruct, dig hole
 lod
@@ -2639,6 +3109,11 @@ use [[https://software.intel.com/en-us/gpa/details][Graphics Performance Analyze
 
 
 
+** TODO advanced terrain
+https://zhuanlan.zhihu.com/p/33887115
+
+
+
 ** TODO optimize memory, cg(v0.5.9)
 
 
@@ -3252,6 +3727,8 @@ http://ogldev.atspace.co.uk/www/tutorial37/tutorial37.html
 
 ** TODO VR
 https://zhuanlan.zhihu.com/p/24952120
+
+http://gad.qq.com/article/detail/40819
 * Record
 
 
